--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -6,7 +6,7 @@
 @import play.i18n.Lang
 @import play.i18n.Messages
 
-@import models.components._
+@import views.html.components
 @import views.html._
 
 @import common.system._
