--- a/app/views/manage/company/createdialog.scala.html
+++ b/app/views/manage/company/createdialog.scala.html
@@ -20,7 +20,7 @@
 		Map("id"->"createOk", "type"->"primary", "text"->messages(MessageKeys.OK), "default"->"true")
 	)){
 
-	@helper.form(helper.CSRF(controllers.manage.company.routes.Edit.create()), 'name->"createForm", 'id->"createForm") {
+	@helper.form(helper.CSRF(controllers.manage.company.routes.Edit.create()), Symbol("name")->"createForm", Symbol("id")->"createForm") {
 		<div>
 			<p class="text-danger"></p>
 		</div>
