--- a/app/views/system/slide.scala.html
+++ b/app/views/system/slide.scala.html
@@ -84,7 +84,7 @@
 		<link rel="stylesheet" href="@routes.Assets.versioned("lib/reveal.js/css/zenburn.css")">
 
 		<!-- Printing and PDF exports -->
-		@script(args = 'type -> "text/javascript") {
+		@script(args = Symbol("type") -> "text/javascript") {
 
 			'use strict';
 
