--- a/app/views/debug.scala.html
+++ b/app/views/debug.scala.html
@@ -25,4 +25,4 @@
 	<div><strong>jQuery</strong>&nbsp;<span id="jQuery_ver"></span></div>
 	<div><strong>Bootstrap</strong>&nbsp;<span id="Bootstrap_ver"></span></div>
 
-"""), "data-placement"->"bottom", "class"->"d-none", "data-memory"->(((Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory())/1000000) + "/" + (Runtime.getRuntime().maxMemory())/1000000), "data-jdkver"->System.getProperty("java.version"), "data-scalaver"->Properties.versionNumberString, "data-playver"->play.core.PlayVersion.current))
+"""), "data-placement"->"bottom", "class"->"d-none", "data-memory"->(((Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory())/1000000).toString + "/" + (Runtime.getRuntime().maxMemory()/1000000).toString), "data-jdkver"->System.getProperty("java.version"), "data-scalaver"->Properties.versionNumberString, "data-playver"->play.core.PlayVersion.current))
