--- a/app/views/environment/browser/box.scala.html
+++ b/app/views/environment/browser/box.scala.html
@@ -2,7 +2,7 @@
 @import scala.collection.immutable.Map
 @import scala.collection.immutable.Seq
 @import scala.collection.immutable.List
-@import scala.collection.JavaConverters._
+@import scala.jdk.CollectionConverters._
 
 @import play.i18n.Lang
 @import play.i18n.Messages
@@ -40,7 +40,7 @@
 
 			<div id="box">#box</div>
 
-			@development.proptable("", map.asScala.toMap)
+			@development.proptable("", map)
 		}
 
 		@libraries.standard.last()
