--- a/app/views/framework/application/validation.scala.html
+++ b/app/views/framework/application/validation.scala.html
@@ -3,7 +3,7 @@
 @import scala.collection.immutable.SortedMap
 @import scala.collection.immutable.Seq
 @import scala.collection.immutable.List
-@import scala.collection.JavaConverters._
+@import scala.jdk.CollectionConverters._
 
 @import play.i18n.Lang
 @import play.i18n.Messages
@@ -39,13 +39,13 @@
 				<div class="col-md-9">
 
 					<h2 class="headline">Play</h2>
-					@development.proptable("", SortedMap[String, AnyRef]() ++ playMap.asScala.toMap)
+					@development.proptable("", SortedMap[String, AnyRef]() ++ playMap)
 
 					<h2 class="headline">JSR-303/380</h2>
-					@development.proptable("", SortedMap[String, AnyRef]() ++ jsr380Map.asScala.toMap)
+					@development.proptable("", SortedMap[String, AnyRef]() ++ jsr380Map)
 
 					<h2 class="headline">fine play</h2>
-					@development.proptable("", SortedMap[String, AnyRef]() ++ fineplayMap.asScala.toMap)
+					@development.proptable("", SortedMap[String, AnyRef]() ++ fineplayMap)
 				</div>
 			</div>
 		}
