--- a/app/views/manage/company/deletedialog.scala.html
+++ b/app/views/manage/company/deletedialog.scala.html
@@ -20,7 +20,7 @@
 		Map("id"->"deleteOk", "type"->"primary", "text"->messages(MessageKeys.OK), "default"->"true")
 	)){
 
-	@helper.form(helper.CSRF(controllers.manage.company.routes.Edit.delete()), 'name->"deleteForm", 'id->"deleteForm") {
+	@helper.form(helper.CSRF(controllers.manage.company.routes.Edit.delete()), Symbol("name")->"deleteForm", Symbol("id")->"deleteForm") {
 		<div>
 			<p class="text-danger"></p>
 		</div>
