--- a/app/views/setting/user/changeuser/change.scala.html
+++ b/app/views/setting/user/changeuser/change.scala.html
@@ -59,7 +59,7 @@
 							</div>
 							<div class="card-body">
 
-								@helper.form(helper.CSRF(controllers.setting.user.routes.ChangeUser.apply()), args = 'class -> "form-change") {
+								@helper.form(helper.CSRF(controllers.setting.user.routes.ChangeUser.apply()), args = Symbol("class") -> "form-change") {
 									<h4 class="card-title">@messages(MessageKeys.CHANGEUSER_PLEASE__CHANGE)</h4>
 									<p class="card-text">@messages(MessageKeys.CHANGEUSER_PLEASE__CHANGE_DESCRIPTION)</p>
 									@if(form.hasGlobalErrors) {
