--- a/app/views/setting/user/changeuser/confirmdialog.scala.html
+++ b/app/views/setting/user/changeuser/confirmdialog.scala.html
@@ -19,7 +19,7 @@
 		Map("id"->"confirmOk", "type"->"primary", "text"->messages(MessageKeys.OK), "default"->"true")
 	)){
 
-	@helper.form(helper.CSRF(controllers.user.routes.User.confirm()), 'name->"confirmForm", 'id->"confirmForm") {
+	@helper.form(helper.CSRF(controllers.user.routes.User.confirm()), Symbol("name")->"confirmForm", Symbol("id")->"confirmForm") {
 		<div>
 			<p class="text-danger"></p>
 		</div>
