--- a/app/views/setting/user/updateform.scala.html
+++ b/app/views/setting/user/updateform.scala.html
@@ -18,7 +18,7 @@
 
 @components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3")){
 
-	@helper.form(helper.CSRF(controllers.setting.user.routes.User.update()), 'name->"updateForm", 'id->"updateForm") {
+	@helper.form(helper.CSRF(controllers.setting.user.routes.User.update()), Symbol("name")->"updateForm", Symbol("id")->"updateForm") {
 		@if(form.hasGlobalErrors) {
 			<p class="text-danger">@form.globalError.get.message</p>
 		}
