Follow Play Framework v2.8.0-M4

--- a/app/views/body.scala.html
+++ b/app/views/body.scala.html
@@ -35,7 +35,7 @@
 @isShow(permissions:Permission*) = @{
 
 	LoggerFactory.getLogger(MethodHandles.lookup().lookupClass()).info("Menu");
-	val roleValues = request.session().getOptional(User.ROLES).orElse(/* Direct access of not signin */"");
+	val roleValues = request.session().get(User.ROLES).orElse(/* Direct access of not signin */"");
 	models.system.System.isPermissionAllowed(EnumSet.copyOf(permissions), User.getPermissions(Sessions.toRoles(roleValues)))
 }
 
@@ -150,7 +150,7 @@
 						@components.button(Map("id"->"scrollTopButton", "type"->"link", "icon"->"fas fa-angle-double-up", "text"->"", "class"->"ml-1"))
 						<div class="btn-group">
 							<button id="system_user-menu" type="button" class="btn btn-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<i class="fas fa-user"></i><span class="d-none d-sm-inline">&nbsp;@request.session().getOptional(User.USER_ID).orElse(/* Direct access of not signin */"")</span>
+								<i class="fas fa-user"></i><span class="d-none d-sm-inline">&nbsp;@request.session().get(User.USER_ID).orElse(/* Direct access of not signin */"")</span>
 							</button>
 							<div class="dropdown-menu dropdown-menu-right text-left">
 								<a class="dropdown-item" href="@controllers.setting.user.routes.User.index()"><i class="fas fa-cog"></i> @messages(MessageKeys.SETTING)...</a>
@@ -302,7 +302,7 @@
 		"@MessageKeys.ERROR":"@messages(MessageKeys.ERROR)",
 		"currentSection":"@currentSection",
 		"currentWork":"@currentWork",
-		"userId":"@request.session().getOptional(User.USER_ID).orElse(/* Direct access of not signin */"")",
+		"userId":"@request.session().get(User.USER_ID).orElse(/* Direct access of not signin */"")",
 		"getHelpError":"@messages(MessageKeys.SYSTEM_ERROR_X_NOTEXIST, messages(MessageKeys.HELP))"
 	}'></div>
 
