--- a/app/views/lab/application/download.scala.html
+++ b/app/views/lab/application/download.scala.html
@@ -20,7 +20,7 @@
 
 @encodedUserId() = @{
 
-	var userId = request.session().getOptional(models.user.User.USER_ID).get();
+	var userId = request.session().get(models.user.User.USER_ID).get();
 
 	try {
 
