--- a/app/views/libraries/standard/head.scala.html
+++ b/app/views/libraries/standard/head.scala.html
@@ -27,4 +27,4 @@
 @libraries.fontawesome.head()
 
 <link rel='stylesheet' href='@routes.Assets.versioned("themes/base.css")'>
-<link rel='stylesheet' href='@routes.Assets.versioned("themes/" + request.session().getOptional(models.user.User.THEME).orElse(models.user.User.Theme.DEFAULT.name()).toLowerCase + "/theme.css")'>
+<link rel='stylesheet' href='@routes.Assets.versioned("themes/" + request.session().get(models.user.User.THEME).orElse(models.user.User.Theme.DEFAULT.name()).toLowerCase + "/theme.css")'>
