--- a/app/views/manage/batch/index.scala.html
+++ b/app/views/manage/batch/index.scala.html
@@ -34,7 +34,7 @@
 
 @encodedUserId() = @{
 
-	var userId = request.session().getOptional(models.user.User.USER_ID).get();
+	var userId = request.session().get(models.user.User.USER_ID).get();
 
 	try {
 
