--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -222,7 +222,7 @@
 							Map("name"->"marked", "icon"->"fab fa-markdown", "link"->"https://github.com/chjj/marked", "info"->""),
 							Map("name"->"markdeep", "icon"->"fab fa-markdown", "link"->"http://casual-effects.com/markdeep", "info"->""),
 							Map("name"->"Parsley", "icon"->"fas fa-pen-alt", "link"->"http://parsleyjs.org", "info"->""),
-							Map("name"->"bootstrap-colorpicker", "icon"->"fas fa-tint", "link"->"https://itsjavi.com/bootstrap-colorpicker/", "info"->""),
+							Map("name"->"bootstrap-colorpicker", "icon"->"fas fa-tint", "link"->"https://github.com/itsjavi/bootstrap-colorpicker", "info"->""),
 							Map("name"->"jqTree", "icon"->"fas fa-sitemap", "link"->"http://mbraak.github.io/jqTree/", "info"->""),
 							Map("name"->"Snap.svg", "icon"->"fas fa-draw-polygon", "link"->"http://snapsvg.io/", "info"->""),
 							Map("name"->"Frappé Gantt", "icon"->"fas fa-pencil-alt", "link"->"https://frappe.github.io/gantt/", "info"->""),
@@ -258,10 +258,13 @@
 							Map("name"->"IPAex", "icon"->"fas fa-font", "link"->"http://ipafont.ipa.go.jp", "info"->""),
 							Map("name"->"IPAmjMincho", "icon"->"fas fa-font", "link"->"http://mojikiban.ipa.go.jp/1300.html", "info"->""),
 
-							Map("name"->"geckodriver", "icon"->"fab fa-firefox", "link"->" https://github.com/mozilla/geckodriver", "info"->""),
+							Map("name"->"geckodriver", "icon"->"fab fa-firefox", "link"->"https://github.com/mozilla/geckodriver", "info"->""),
 							Map("name"->"RTLCSS", "icon"->"fab fa-css3-alt", "link"->"https://rtlcss.com", "info"->""),
 							Map("name"->"jQuery RTL Scroll Type Detector", "icon"->"fas fa-arrows-alt-h", "link"->"https://github.com/othree/jquery.rtl-scroll-type", "info"->""),
-							Map("name"->"Natural Earth", "icon"->"fas fa-globe", "link"->"http://www.naturalearthdata.com", "info"->"")
+							Map("name"->"Natural Earth", "icon"->"fas fa-globe", "link"->"http://www.naturalearthdata.com", "info"->""),
+
+							Map("name"->"Mapbox GL JS", "icon"->"far fa-map", "link"->"https://github.com/mapbox/mapbox-gl-js", "info"->""),
+							Map("name"->"Mapbox GL Language", "icon"->"far fa-map", "link"->"https://github.com/mapbox/mapbox-gl-language", "info"->"")
 						))
 					</div>
 				</div>
