--- a/app/views/lab/ui/tasks.scala.html
+++ b/app/views/lab/ui/tasks.scala.html
@@ -41,6 +41,7 @@
 	<a href="@controllers.lab.ui.routes.UI.index("block").toString()" class="list-group-item @("active".when(equalTask("block")))">Block</a>
 	<a href="@controllers.lab.ui.routes.UI.index("pay").toString()" class="list-group-item @("active".when(equalTask("pay"))) secret">@messages(MessageKeys.PAY)</a>
 	<a href="@controllers.lab.ui.routes.UI.index("securekeyboard").toString()" class="list-group-item @("active".when(equalTask("securekeyboard"))) secret">@messages(MessageKeys.X__X, messages(MessageKeys.SECURE), messages(MessageKeys.KEYBOARD))</a>
+	<a href="@controllers.lab.ui.routes.UI.index("loadbutton").toString()" class="list-group-item @("active".when(equalTask("loadbutton"))) secret">@messages(MessageKeys.X__X, messages(MessageKeys.LOAD), messages(MessageKeys.BUTTON))</a>
 	<a href="@controllers.lab.ui.routes.UI.index("glance").toString()" class="list-group-item @("active".when(equalTask("glance"))) secret">Glance</a>
 	<a href="@controllers.lab.ui.routes.UI.index("reverse").toString()" class="list-group-item @("active".when(equalTask("reverse"))) secret">Reverse</a>
 	<a href="@controllers.lab.ui.routes.UI.index("window").toString()" class="list-group-item @("active".when(equalTask("window")))">@messages(MessageKeys.WINDOW)</a>
