--- a/public/stylesheets/size.css
+++ b/public/stylesheets/size.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
+.w-fit-content {
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
+	width: fit-content;
+}
+
 .w-0 {width: 0% !important;}
 .w-10 {width: 10% !important;}
 .w-20 {width: 20% !important;}
