--- a/app/views/manage/company/organization/list/index.scala.html
+++ b/app/views/manage/company/organization/list/index.scala.html
@@ -140,6 +140,7 @@
 		}'></div>
 
 		@libraries.standard.last()
+		@libraries.bscustomfileinput.last()
 		@libraries.datatables.last()
 		@libraries.pickadate.last()
 		<script @{CSPNonce.attr} src='@routes.Assets.versioned("javascripts/manage/company/organization/list/index.js")'></script>
