--- a/app/views/manage/user/index.scala.html
+++ b/app/views/manage/user/index.scala.html
@@ -155,6 +155,7 @@
 		}'></div>
 
 		@libraries.standard.last()
+		@libraries.bscustomfileinput.last()
 		@libraries.datatables.last()
 		@libraries.moment.last()
 		@libraries.pickadate.last()
