--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -151,6 +151,7 @@
 							Map("name"->"Bootstrap", "icon"->"ii ii-bootstrap", "link"->"http://getbootstrap.com", "info"->"The most popular HTML, CSS, and JavaScript framework for developing responsive, mobile first projects on the web."),
 							Map("name"->"Bootstrap Docs", "icon"->"fas fa-book", "link"->"http://getbootstrap.com", "info"->""),
 							Map("name"->"Popper.js", "icon"->"fas fa-comment-alt", "link"->"https://popper.js.org", "info"->""),
+							Map("name"->"bs-custom-file-input", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/Johann-S/bs-custom-file-input", "info"->""),
 							Map("name"->"Hammer.js", "icon"->"fas fa-hand-point-up", "link"->"http://hammerjs.github.io", "info"->""),
 
 							Map("name"->"Font Awesome", "icon"->"fas fa-flag", "link"->"https://fontawesome.com", "info"->""),
