--- a/app/views/lab/ui/detailimage.scala.html
+++ b/app/views/lab/ui/detailimage.scala.html
@@ -43,7 +43,7 @@
 
 					<div id="imageContainer" class="mb-3">
 						<div id="imageScalable" class="w-100 h-100 position-relative">
-							@components.image(Map("id"->"image" , "source"->routes.Assets.versioned("images/signins/IMG_2973.JPG").toString, "fluid"->"true"))
+							@components.image(Map("id"->"image" , "class"->"user-select-none", "source"->routes.Assets.versioned("images/signins/IMG_2973.JPG").toString, "fluid"->"true"))
 							<div id="imageDraggable" class="w-100 h-100 position-absolute"></div>
 						</div>
 					</div>
